--- a/EazyHomeAccount/EazyHomeAccount.csproj
+++ b/EazyHomeAccount/EazyHomeAccount.csproj
@@ -154,7 +154,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\Images\logo 240x90.jpg" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -163,6 +162,15 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\block.png" />
+    <Content Include="Images\favicon %281%29.ico" />
+    <Content Include="Images\favicon %282%29.ico" />
+    <Content Include="Images\favicon.ico" />
+    <Content Include="Images\jcm.jpg" />
+    <Content Include="Images\logoBlue-circle.PNG" />
+    <Content Include="Images\logoBlue-square.PNG" />
+    <Content Include="Images\logoBlue.PNG" />
+    <Content Include="Images\sarawoot.PNG" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
@@ -196,6 +204,7 @@
     <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="App_Data\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
